; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_utils.c_rand_scale.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_utils.c_rand_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @rand_scale(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca float, align 4
  %4 = alloca float, align 4
  store float %0, float* %3, align 4
  %5 = load float, float* %3, align 4
  %6 = call float @rand_uniform(i32 1, float %5)
  store float %6, float* %4, align 4
  %7 = call i32 (...) @rand()
  %8 = srem i32 %7, 2
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load float, float* %4, align 4
  store float %11, float* %2, align 4
  br label %17

12:                                               ; preds = %1
  %13 = load float, float* %4, align 4
  %14 = fpext float %13 to double
  %15 = fdiv double 1.000000e+00, %14
  %16 = fptrunc double %15 to float
  store float %16, float* %2, align 4
  br label %17

17:                                               ; preds = %12, %10
  %18 = load float, float* %2, align 4
  ret float %18
}

declare dso_local float @rand_uniform(i32, float) #1

declare dso_local i32 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
